page inscription et profile

--- a/templates/catalogue.html
+++ b/templates/catalogue.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/catalogue.css">
 
+  <link rel="icon" type="image/png" href="icones/favicon.png" />
+
 </head>
 
 <body>
@@ -62,11 +64,174 @@
     <button>Connexion</button>
 
     <div id="modale" class="hidden">
-      <div class="row d-flex">
+      <div class="container">
+        <div class="row">
+
+          <div class="row marge">
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/administratif.svg" alt="Administratif">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Administratif</p>
+                  <ul>
+                    <li><a href="#">Assistance juridique</a></li>
+                    <li><a href="#">Comptabilité</a></li>
+                    <li><a href="#">Dossier banque</a></li>
+                    <li><a href="#">Impôts</a></li>
+                    <li><a href="#">Rédaction</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/art.svg" alt="Art">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Art</p>
+                  <ul>
+                    <li><a href="#">Cinéma</a></li>
+                    <li><a href="#">Théâtre</a></li>
+                    <li><a href="#">Danse</a></li>
+                    <li><a href="#">Musique</a></li>
+                    <li><a href="#">Peinture</a></li>
+                    <li><a href="#">Photographie</a></li>
+                    <li><a href="#">Street-art</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/bien_etre.svg" alt="Bien-être">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Bien-être</p>
+                  <ul>
+                    <li><a href="#">Coiffure</a></li>
+                    <li><a href="#">Développement-personnel</a></li>
+                    <li><a href="#">Maquillage</a></li>
+                    <li><a href="#">Massage</a></li>
+                    <li><a href="#">Naturopathie</a></li>
+                    <li><a href="#">Relaxation</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/gastronomie.svg" alt="Gastronomie">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Gastronomie</p>
+                  <ul>
+                    <li><a href="#">Asiatique</a></li>
+                    <li><a href="#">Cuisine du monde</a></li>
+                    <li><a href="#">Exotique</a></li>
+                    <li><a href="#">Français</a></li>
+                    <li><a href="#">Gastronomique</a></li>
+                    <li><a href="#">Italien</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+          </div>
+
+
+          <div class="row marge_between">
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/langues.svg" alt="Langues">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Langues</p>
+                  <ul>
+                    <li><a href="#">Allemand</a></li>
+                    <li><a href="#">Anglais</a></li>
+                    <li><a href="#">Arabe</a></li>
+                    <li><a href="#">Chinois</a></li>
+                    <li><a href="#">Espagnol</a></li>
+                    <li><a href="#">Français</a></li>
+                    <li><a href="#">Italien</a></li>
+                    <li><a href="#">Japonais</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/numerique.svg" alt="Numérique">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Numérique</p>
+                  <ul>
+                    <li><a href="#">Création site web</a></li>
+                    <li><a href="#">Logiciels design</a></li>
+                    <li><a href="#">Logiciels Office</a></li>
+                    <li><a href="#">Marketing digital</a></li>
+                    <li><a href="#">Montage photo</a></li>
+                    <li><a href="#">Montage vidéo</a></li>
+                    <li><a href="#">Réseaux sociaux</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2">
+                  <img src="illustrations/sciences.svg" alt="Sciences">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Sciences</p>
+                  <ul>
+                    <li><a href="#">Biosciences</a></li>
+                    <li><a href="#">Chimie</a></li>
+                    <li><a href="#">Géosciences</a></li>
+                    <li><a href="#">Maths</a></li>
+                    <li><a href="#">Physique</a></li>
+                    <li><a href="#">Économie</a></li>
+                    <li><a href="#">Sciences de l'Univers</a></li>
+                    <li><a href="#">Sciences Politiques</a></li>
+                  </ul>
+                </div>
+              </div>
+            </article>
+
+            <article class="col-3">
+              <div class="row">
+                <div class="col-2 sports">
+                  <img src="illustrations/sport.svg" alt="Sports">
+                </div>
+                <div class="col-8">
+                  <p class="categorie">Sports</p>
+                  <ul>
+                    <li><a href="#">Danse</li>
+                    <li><a href="#">Fitness</li>
+                    <li><a href="#">Musculation</li>
+                    <li><a href="#">Yoga</a></li>       
+                 </ul>
+                </div>
+              </div>
+            </article>
+          </div>
+          
+        </div>
       </div>
-
-      <!------- MODALE EN COURS -------->
-
     </div>
 
   </nav>
@@ -114,7 +279,7 @@
 
             <div class="d-flex align-items-end ville">
               <img src="icones/localisation.svg" alt="localisation">
-              <p>Paris & Ile-de-France</p>
+              <p>Paris & Ile-de-France</>
             </div>
 
             <div class="d-flex align-items-center voirprofil">
@@ -396,7 +561,7 @@
             <li>
               <h4>À propos</h4>
             </li>
-            <li><a href="#">Qui sommes nous ?</a></li>
+            <li><a href="#">Qui sommes-nous ?</a></li>
             <li><a href="#">Mention légales</a></li>
             <li><a href="#">CGU</a></li>
           </ul>
@@ -435,14 +600,26 @@
   </footer>
   <!--------------- FIN DU FOOTER --------------->
 
-
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+  <script>
+    let catalogue = document.getElementById('catalogue')
+    let modale = document.getElementById('modale')
 
+    catalogue.addEventListener("click", () => {
+      if (modale.className == "seen") {
+        modale.className = "hidden"
+      }
+      else {
+        modale.className = "seen"
+      }
+    })
+
+  </script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
