--- a/templates/comment_ca_marche.html
+++ b/templates/comment_ca_marche.html
@@ -19,7 +19,8 @@
   <title>Platon, donner pour apprendre</title>
 
   <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/connexion.css">
+  <link rel="stylesheet" href="css/comment_ca_marche.css">
+
 
   <link rel="icon" type="image/png" href="icones/favicon.png" />
 
@@ -223,40 +224,198 @@
                     <li><a href="#">Danse</li>
                     <li><a href="#">Fitness</li>
                     <li><a href="#">Musculation</li>
-                    <li><a href="#">Yoga</a></li>       
-                 </ul>
+                    <li><a href="#">Yoga</a></li>
+                  </ul>
                 </div>
               </div>
             </article>
           </div>
-          
+
         </div>
       </div>
     </div>
 
   </nav>
+
   <!--------------- FIN DE LA NAV --------------->
 
 
-  <!--------------- DEBUT DU MAIN --------------->
-  <main>
+  <!--------------- DEBUT DU HEADER Background de la home + titre page  --------------->
 
-    <form method="" action="">
+    <header>
 
-      <h2>Connexion</h2>
-
-      <input type="email" name="email" id="email" placeholder="Adresse mail *" size="30" />
-
-      <input type="password" name="pass" id="pass" placeholder="Mot de passe *" size="30" />
-
-      <a class="mdp" href="#">Mot de passe oublié ?</a>
-
-      <div class="d-flex justify-content-between">
-        <button class="inscription" type="submit">S'inscrire</button>
-        <a class="btn shadow connexion" href="#">Connexion</a>
+      <div class="container-fluid">
+        <div class="container">
+          <div class="row">
+  
+            <div class="titre text-center">
+              <h1>La communauté Platon,</br>comment ça marche ?</h1>
+            </div>
+          </div>
+        </div>
       </div>
 
-    </form>
+  </header>
+
+  <!--------------- FIN DU HEADER --------------->
+
+
+  <!--------------- DEBUT DU MAIN --------------->
+
+  <main>
+
+    <div class="container">
+
+      <section class="concept1">
+
+        <div class="row align-items-center" id="etape">
+
+          <div class="col-md-6">
+
+            <div class="d-flex align-items-center">
+              <h2>1.</h2>
+              <h3>Créez votre compte</h3>
+            </div>
+
+            <p> Inscrivez-vous sur Platon en seulement quelques clics. Puis, complétez <span class="textebold">votre profil</span> pour bénéficier de votre première heure de cours.</p>
+
+          </div>
+
+          <div class="d-flex offset-3 col-md-3">
+            <img src="illustrations/chrono.svg" alt="Créez mon compte" id="moncompte">
+          </div>
+        </div>
+
+        <div class="fleche3">
+          <img src="img/fleche1.png" alt="sectionfleche1">
+        </div>
+
+      </section>
+
+
+      <section class="concept2">
+
+        <div class="row align-items-center" id="etape">
+
+          <div class="d-flex offset col-md-4">
+            <img src="illustrations/loupe.svg" alt="Trouvez un savoir" id="savoir">
+          </div>
+
+
+          <div class="offset-3 col-md-5">
+            <div class="d-flex align-items-center trouversavoir">
+              <h2>2.</h2>
+              <h3>Découvrez les savoirs</h3>
+            </div>
+
+            <p>Consultez <span class="textebold">le catalogue des savoirs</span> alimenté par la communauté. Entrez en contact avec les autres membres pour réserver vos cours.</p>
+          </div>
+        </div>
+
+        <div class="fleche2">
+          <img src="img/fleche2.png" alt="sectionfleche2">
+        </div>
+
+
+      </section>
+
+
+
+
+      <section class="concept3">
+
+
+        <div class="row align-items-center" id="etape">
+
+          <div class="col-md-6">
+
+            <div class="d-flex align-items-center">
+              <h2>3.</h2>
+              <h3>Apprenez de nouvelles choses</h3>
+            </div>
+
+            <p>Planifiez votre cours avec votre mentor en respectant la charte de Platon et rencontrez-vous. Récompensez son travail par votre <span class="textebold">crédit temps.</span class="textebold"></br>
+          </div>
+
+          <div class="d-flex offset-3 col-md-3">
+            <img src="illustrations/main.svg" alt="Apprendre de nouvelles choses" id="choses">
+          </div>
+        </div>
+
+        <div class="fleche3">
+          <img src="img/fleche1.png" alt="sectionfleche3">
+        </div>
+
+      </section>
+
+
+
+      <section class="concept4">
+
+
+        <div class="row align-items-center" id="etape">
+
+          <div class="d-flex col-md-5">
+            <img src="illustrations/arbre.svg" alt="Partagez vos connaissances" id="connaissances">
+          </div>
+
+
+          <div class="offset-2 col-md-5">
+
+            <div class="d-flex align-items-center">
+              <h2>4.</h2>
+
+              <h3>Partagez vos connaissances</h3>
+            </div>
+
+            <p>À votre tour, gagnez des crédits temps en partageant <span class="textebold">vos connaissances et savoirs</span> avec les autres membres.
+              <br>Aidez-nous à faire grandir la communauté Platon !
+            </p>
+          </div>
+        </div>
+
+
+      </section>
+
+    </div>
+
+
+
+    <section class="endsection">
+
+      <div class="container">
+
+
+
+        <div class="row">
+
+          <div class="col-md-7 supermentor">
+
+            <h3>Le programme super mentor</h3>
+
+            <br><span class="textebold">Faites de votre passion votre métier !</span> <br>
+          </br>
+          Conseils personnalisés, master classes, entretiens individuels... <br>Platon propose un <span class="textebold">coaching personnalisé</span> réservé aux membres pour lesquels transmettre leurs savoirs est devenu une vocation. <br></br><span class="textebold">Une seule condition</span> : les personnes devront avoir réalisé <span class="textebold">au moins 40 cours</span> via
+              la plateforme Platon pour bénéficier de ce service d’accompagnement.
+            </p>
+          </div>
+
+          <div class="offset-1 col-md-4">
+
+            <div class="d-flex justify-content-center"> <img src="icones/medaille_bleu.svg" alt="medal"></div>
+            <div class="d-flex justify-content-center"><a class="boutonensavoirplus" href="#">En savoir plus</a></div>
+
+          </div>
+
+        </div>
+
+    </section>
+    </div>
+
+
+
+
+
 
   </main>
   <!--------------- FIN DU MAIN --------------->
@@ -267,21 +426,17 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-3">
+          <h4>À propos</h4>
           <ul>
-            <li>
-              <h4>À propos</h4>
-            </li>
             <li><a href="#">Qui sommes-nous ?</a></li>
-            <li><a href="#">Mention légales</a></li>
+            <li><a href="#">Mentions légales</a></li>
             <li><a href="#">CGU</a></li>
           </ul>
         </div>
 
         <div class="col-12 col-md-3">
+          <h4>Contact</h4>
           <ul>
-            <li>
-              <h4>Contact</h4>
-            </li>
             <li><a href="#">Contactez-nous</a></li>
             <li><a href="#">Informations légales</a></li>
             <li><a href="#">Paramètres des cookies</a></li>
@@ -289,10 +444,8 @@
         </div>
 
         <div class="col-12 col-md-3">
+          <h4>Platon</h4>
           <ul>
-            <li>
-              <h4>Platon</h4>
-            </li>
             <li><a href="#">Comment ça marche ?</a></li>
             <li><a href="#">La charte de Platon</a></li>
           </ul>
@@ -306,16 +459,16 @@
           </div>
         </div>
       </div>
-
   </footer>
   <!--------------- FIN DU FOOTER --------------->
+
 
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+  </script>
   <script>
     let catalogue = document.getElementById('catalogue')
     let modale = document.getElementById('modale')
@@ -323,12 +476,10 @@
     catalogue.addEventListener("click", () => {
       if (modale.className == "seen") {
         modale.className = "hidden"
-      }
-      else {
+      } else {
         modale.className = "seen"
       }
     })
-
   </script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
