--- a/templates/index (9).html
+++ b/templates/index (9).html
@@ -19,8 +19,8 @@
   <title>Platon, donner pour apprendre</title>
 
   <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/base.css">
-
+  <link rel="stylesheet" href="css/index.css">
+  
   <link rel="icon" type="image/png" href="icones/favicon.png" />
 
 </head>
@@ -31,7 +31,7 @@
 
   <div class="nav">
     <nav class="container-fluid d-flex align-items-center justify-content-between">
-
+  
       <svg width="195" height="50" viewBox="0 0 195 50" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd"
           d="M22.1806 0H39.3003C42.2939 0 44.9787 0.517703 47.3549 1.55311C49.7498 2.58852 51.6489 4.15087 53.0521 6.24018C54.4554 8.32948 55.157 10.9642 55.157 14.1444C55.157 17.3061 54.4554 19.9871 53.0521 22.1873C51.6489 24.369 49.7498 26.0331 47.3549 27.1794C44.9787 28.3073 42.2939 28.8712 39.3003 28.8712H32.9856L32.9764 49.2378H15.8567C12.8631 49.2378 10.1782 48.7201 7.80208 47.6847C5.4072 46.6493 3.50813 45.0869 2.10488 42.9976C0.701626 40.9083 0 38.2736 0 35.0934C0 31.9317 0.701626 29.2507 2.10488 27.0505C3.50813 24.8687 5.4072 23.2047 7.80208 22.0583C10.1782 20.9305 12.8631 20.3666 15.8567 20.3666H22.1714V3.47649L22.1806 0ZM35.8202 20.3846H32.9856V8.51438H35.8202C37.1486 8.51438 38.4209 8.69003 39.637 9.04132C40.8532 9.39262 41.8448 10.0028 42.6119 10.8718C43.379 11.7223 43.7626 12.9241 43.7626 14.4772C43.7626 16.0118 43.379 17.2044 42.6119 18.0549C41.8448 18.9054 40.8532 19.5063 39.637 19.8576C38.4209 20.2089 37.1486 20.3846 35.8202 20.3846ZM19.3368 28.8532H22.1714V40.7234H19.3368C18.0084 40.7234 16.7361 40.5478 15.52 40.1965C14.3038 39.8452 13.3122 39.235 12.5451 38.366C11.778 37.5155 11.3944 36.3137 11.3944 34.7606C11.3944 33.226 11.778 32.0334 12.5451 31.1829C13.3122 30.3324 14.3038 29.7315 15.52 29.3802C16.7361 29.0289 18.0084 28.8532 19.3368 28.8532Z"
@@ -50,25 +50,25 @@
           d="M163.402 49.1125V20.7128H173.646V23.5971C174.881 22.4323 176.331 21.5171 177.996 20.8514C179.661 20.1673 181.411 19.8253 183.244 19.8253C185.452 19.8253 187.407 20.306 189.11 21.2674C190.813 22.2289 192.15 23.5601 193.123 25.2612C194.115 26.9437 194.611 28.8758 194.611 31.0576V49.1125H184.367V33.2209C184.367 31.5198 183.89 30.1793 182.936 29.1994C181.982 28.201 180.691 27.7018 179.063 27.7018C177.959 27.7018 177.005 27.9236 176.2 28.3674C175.396 28.8111 174.769 29.4305 174.32 30.2256C173.871 31.0021 173.646 31.8989 173.646 32.9158V49.1125H163.402Z"
           fill="#25366F" />
       </svg>
-
+  
       <div class="nav-options d-flex align-items-center">
-
+  
         <ul class="d-flex justify-content-center mt-4">
           <li><a href="#"> Comment ça marche ?</a></li>
           <li><a id="catalogue" href="#"> Catalogue des savoirs</a></li>
         </ul>
-
+  
         <input type="search" name="search-bar" id="search-bar" placeholder="Recherche">
-
+  
         <a class="blog" href="#">Blog</a>
-
+  
       </div>
       <button>Connexion</button>
-
+  
       <div id="modale" class="hidden">
         <div class="container">
           <div class="row">
-
+  
             <div class="row marge">
               <article class="col-3">
                 <div class="row">
@@ -87,7 +87,7 @@
                   </div>
                 </div>
               </article>
-
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2">
@@ -107,7 +107,7 @@
                   </div>
                 </div>
               </article>
-
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2">
@@ -126,8 +126,8 @@
                   </div>
                 </div>
               </article>
-
-
+  
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2">
@@ -146,10 +146,10 @@
                   </div>
                 </div>
               </article>
-
+  
             </div>
-
-
+  
+  
             <div class="row marge_between">
               <article class="col-3">
                 <div class="row">
@@ -171,8 +171,8 @@
                   </div>
                 </div>
               </article>
-
-
+  
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2">
@@ -192,7 +192,7 @@
                   </div>
                 </div>
               </article>
-
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2">
@@ -213,7 +213,7 @@
                   </div>
                 </div>
               </article>
-
+  
               <article class="col-3">
                 <div class="row">
                   <div class="col-2 sports">
@@ -231,14 +231,13 @@
                 </div>
               </article>
             </div>
-
+  
           </div>
         </div>
       </div>
-
+   
     </nav>
   </div>
-
 
   <div class="navbar">
     <div class="dropdown">
@@ -256,8 +255,208 @@
     <img class="logo" src="icones/favicon.png" alt="Logo">
   </div>
 
+  
   <!--------------- FIN DE LA NAV --------------->
 
+
+  <!--------------- DEBUT DU HEADER --------------->
+
+  <header>
+
+    <div class="container-fluid">
+      <div class="container">
+        <div class="row">
+
+          <div class="titre text-center text-white">
+            <h1>Échangez vos savoirs</h1>
+            <h2>On a tous quelque chose à transmettre !</h2>
+            <a class="btn shadow" href="#">Inscription</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <svg viewBox="0 0 1920 146" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M960 0C960 0 375.667 88.8169 0 146H1920L960 0Z" fill="#FBFBFB" />
+    </svg>
+
+  </header>
+
+  <!--------------- FIN DU HEADER --------------->
+
+
+  <!--------------- DEBUT DU MAIN --------------->
+
+  <main>
+
+    <!--DEBUT DE LA PREMIERE SECTION-->
+
+    <section id="quoi">
+
+      <div class="container">
+        <div class="row d-flex justify-content-around align-content-center">
+          <h2>C'est quoi Platon ?</h2>
+
+          <div class="col-12 col-md-3 plateforme">
+            <img src="illustrations/billets.svg" alt="Billets">
+            <h3>Une plateforme gratuite</h3>
+          </div>
+
+          <div class="col-12 col-md-3 qualite">
+            <img src="illustrations/savoirs.svg" alt="savoirs">
+            <h3>Des savoirs variés </br>et de qualité</h3>
+          </div>
+
+          <div class="col-12 col-md-3 communaute">
+            <img src="illustrations/communaute.svg" alt="Communauté">
+            <h3>Une communauté active</h3>
+          </div>
+
+        </div>
+
+        <div class="text-center"><a class="btn shadow" href="#">En savoir plus</a></div>
+      </div>
+
+    </section>
+
+    <!--FIN DE LA PREMIERE SECTION-->
+
+
+    <!--DEBUT DE LA DEUXIEME SECTION-->
+
+    <section id="savoirs">
+
+      <div class="container">
+        <div class="row d-flex justify-content-around align-content-center">
+          <h2>Une multitude de savoirs</h2>
+          <p class="apprenez">Apprenez des uns, transmettez aux autres.</p>
+
+          <div class="col-12 col-md-3">
+            <div class="langues">
+              <img src="illustrations/planete_bleue.svg" alt="Anglais">
+            </div>
+            <p class="text-white cours">Anglais</p>
+          </div>
+
+          <div class="col-12 col-md-3">
+            <div class="gastronomie"><img src="illustrations/gastronomie_bleu.svg" alt="Gastronomie">
+            </div>
+            <p class="text-white cours">Gastronomie</p>
+          </div>
+
+          <div class="col-12 col-md-3">
+            <div class="art"><img src="illustrations/art_bleu.svg" alt="Art">
+            </div>
+            <p class="text-white cours">Art</p>
+          </div>
+
+          <p class="categorie">Près de <span>60 catégories</span> à explorer !</p>
+
+          <div class="text-center">
+            <a class="btn shadow" href="#">Accéder au savoir
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <div id="svg-container">
+      <svg width="100%" height="199" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1920.75 166.928C878.906 56.0543 810.587 277.802 0.746582 166.928V0.793579L1920.75 0.79361V166.928Z"
+          fill="#25366F" />
+      </svg>
+    </div>
+
+
+    <!--FIN DE LA DEUXIEME SECTION-->
+
+
+    <!--DEBUT DE LA TROISIEME SECTION-->
+
+    <section id="temoignages">
+
+      <div class="container">
+        <div class="row">
+          <h2>Témoignages</h2>
+
+          <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+
+              <div class="carousel-item platon-carousel-item active" data-bs-interval="10000">
+                <div class="d-flex flex-column align-items-center">
+                  <div>
+                    <img src="img/theo.png" class="d-block" alt="Théo">
+                  </div>
+                  <div class="carousel-caption d-md-block">
+                    <h5>“Grâce à Platon, j’apprends à cuisiner avec Zoé. Les lasagnes n’ont plus de secret pour moi !
+                      J’adore donner des cours de guitare !”</h5>
+                    <p>Théo, guitariste</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item platon-carousel-item" data-bs-interval="20000">
+                <div class="d-flex flex-column align-items-center">
+                  <div>
+                    <img src="img/anna.png" class="d-block w-3" alt="Anna">
+                  </div>
+                  <div class="carousel-caption d-md-block">
+                    <h5>"Je suis très satisfaite de la plateforme Platon ! J'ai enfin appris à dessiner comme une pro en
+                      échange de mes cours de cuisine.</h5>
+                    <p>Anna, spécialiste en cuisine du monde</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item platon-carousel-item" data-bs-interval="20000">
+                <div class="d-flex flex-column align-items-center">
+                  <div>
+                    <img src="img/louise.png" class="d-block w-3" alt="Louise">
+                  </div>
+                  <div class="carousel-caption d-md-block">
+                    <h5>"Je remercie Platon pour m'avoir fait découvrir une multitude de savoirs. J'ai également
+                      rencontré
+                      des gens géniaux !"</h5>
+                    <p>Louise, pianiste</p>
+                  </div>
+                </div>
+              </div>
+
+
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+
+          </div>
+          <div class="text-center"><a class="btn shadow" href="#">Rejoindre la communauté !</a></div>
+        </div>
+
+    </section>
+
+
+    <!--FIN DE LA TROISIEME SECTION-->
+
+  </main>
+
+  <!--------------- FIN DU MAIN --------------->
 
 
   <!--------------- DEBUT DU FOOTER --------------->
@@ -303,7 +502,7 @@
   </footer>
 
   <!--------------- FIN DU FOOTER --------------->
-
+  
 
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -330,7 +529,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-
 </body>
 
 </html>
