--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -243,7 +243,7 @@
                 {% if ticket.status is same as(0) %}
               <div class="coursprevu col-9">
                 <div>
-                  <p class="nom text-center">{{ticket.sender.infosUser.subCategories[0].name}}</p>
+                  <p class="nom text-center">{{ticket.receiver.infosUser.subCategories[0].name}}</p>
                   <div class="progression d-flex text-center">
                     
                     <div>
@@ -286,7 +286,7 @@
                     </div>
                   
                     <div class="informations">
-                        <p class="nom">{{ticket.receiver.prenom}}</p>
+                        <p class="nom"> <a href="{{path('platon_user_show', {id: ticket.receiver.id})}}"> {{ticket.receiver.prenom}}</a></p>
                         <p> {{ticket.receiver.infosUser.subCategories[0].name}}</p>
                         <div class="d-flex">
                             <p>Avis : </p>
