--- a/templates/sub_categories/show.html.twig
+++ b/templates/sub_categories/show.html.twig
@@ -9,7 +9,7 @@
 
       <div class="container">
 
-        <div class="row d-flex justify-content-between">
+        <div class="row d-flex justify-content-evenly">
           {% for users in sub_category.infosUsers %}
 
           <article class="col-xxl-3 d-flex flex-column align-items-center membercard">
@@ -36,6 +36,7 @@
             </div>
 
             <div class="d-flex">
+            {# On affiche la capacité d'avoir un cours en visio, en présentiel ou les deux selon les options stockées en bdd #}
             {% for classTypes in users.classType %}
               <div class="typecours d-flex align-items-center">{{ classTypes }}<img src="{{asset ('assets/icones/valide_bleu.svg')}}" alt="check">
               </div>
@@ -45,6 +46,7 @@
 
             <div class="d-flex align-items-end ville">
               <img src="{{asset ('assets/icones/localisation.svg')}}" alt="localisation">
+              {# La localisation des users est elle stockée lors de l'affinage des profils ? Si oui, l'affichée dynamiquement ici, Si non, il faut absolument que ça soit fait #}
               <p>Paris & Ile-de-France</>
             </div>
 
@@ -58,7 +60,7 @@
       </div>
     </section>
 
-     {# <h1>{{ sub_category.name }}</h1> 
+     {# Ici on trouvera la donnée simple
 
 
 
