--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -75,10 +75,9 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
           <li><a class="dropdown-item" href="#"> <img src="{{asset('assets/icones/bulle_bleue.svg')}}" alt="Messagerie"> Messagerie</a></li>
-          <li><a class="dropdown-item" href="#"> <img src="{{asset('assets/icones/profil_bleu.svg')}}" alt="Espace personnel"> Espace personnel</a></li>
-          <li><a class="dropdown-item" href="#"> <img src="{{asset('assets/icones/parametres_bleu.svg')}}" alt="Paramètres"> Paramètres</a></li>
-          <li><a class="dropdown-item deconnexion" href="{{ path('app_logout') }}"> 
-          <img src="{{asset('assets/icones/deconnexion.svg')}}" alt="Déconnexion"> Déconnexion</a></li>   
+          <li><a class="dropdown-item" href="{{ path('platon_user_show', {'id':app.user.id})}}"> <img src="{{asset('assets/icones/profil_bleu.svg')}}" alt="Espace personnel"> Espace personnel</a></li>
+          <li><a class="dropdown-item" href="{{ path('platon_user_edit', {'id':app.user.id})}}"> <img src="{{asset('assets/icones/parametres_bleu.svg')}}" alt="Paramètres"> Paramètres</a></li>
+          <li><a class="dropdown-item deconnexion" href="{{ path('app_logout') }}"> <img src="{{asset('assets/icones/deconnexion.svg')}}" alt="Déconnexion"> Déconnexion</a></li>   
         </ul>
       </div>
 
