--- a/templates/how_to/index.html.twig
+++ b/templates/how_to/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{asset('assets\styles\comment_ca_marche.css')}}">
+    <link rel="stylesheet" href="{{asset('assets/styles/comment_ca_marche.css')}}">
 {% endblock %}
 
 {% block innerContent %}
