--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -74,7 +74,7 @@
 							Messagerie</a>
 					</li>
 					<li>
-						<a class="dropdown-item" href="{{ path('app_profile') }}">
+						<a class="dropdown-item" href="{{ path('platon_user_show', {'id': app.user.id}) }}">
 							<img src="{{asset('assets/icones/profil_bleu.svg')}}" alt="Espace personnel">
 							Espace personnel</a>
 					</li>
