--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -20,9 +20,9 @@
 	</header>
 	{# <h1>User</h1> #}
 	{# On check les informations contenues dans User coté Twigg cette fois-ci
-																																													    <pre>
-																																													        {{ dump(user) }}
-																																													    </pre> 
+	<pre>
+        {{ dump(user) }}
+	</pre> 
 			<table class="table">
 				<tbody>
 					<tr>
@@ -95,8 +95,7 @@
 
 
 	<section>
-		<div
-			class="container">
+		<div class="container">
 
 
 			<!-- DEBUT DE LA PREMIERE PARTIE-->
@@ -112,8 +111,7 @@
 				<div class="d-flex flex-column justify-content-between col-4 offset-6">
 					<div class="d-flex justify-content-between">
 						<a class="btn shadow btn-favoris" href="#">Ajouter en favoris</a>
-						<a class="btn shadow btn-cours" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Prendre un
-																																																																																																																																																																																																																																																																																																																			                cours</a>
+						<a class="btn shadow btn-cours" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Prendre un cours</a>
 					</div>
 
 					<div class="d-flex personalite justify-content-between">
@@ -122,9 +120,6 @@
 								{{personnalitys.name}}
 							</div>
 						{% endfor %}
-						{# <p class="tag">Extravertie</p>
-																																																																																																																																																																																				<p class="tag">Enthousiaste</p>
-																																																																																																																																																																																				<p class="tag">Curieuse</p> #}
 					</div>
 				</div>
 
@@ -141,24 +136,9 @@
 				<div div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 					<div class="modal-dialog modal-dialog-centered">
 						<div class="modal-content">
-							<div class="modal-header d-flex align-items-center cours">
-								<label for="cours">Choix du cours :</label>
-								<select class="col-lg-6" name="interest" id="interest">
-									<a href="{{ path('platon_ticket_create', {user: user.id}) }}">Prendre un cours</a>
-									{# <option value="anglais">Anglais</option>
-																																																																																																																																																																		<option value="sport">Sport</option> #}
-								</select>
-							</div>
-							<div class="modal-body">
-
-								<div>
-									<textarea class="col-lg-12" name="message" id="message">Écrivez votre message ici</textarea>
-								</div>
-							</div>
-
 							<div class="modal-footer justify-content-between">
 								<a class="btn-return" href="user_profil.html">Annuler</a>
-								<a class="btn shadow" href="user_profil.html">Envoyer</a>
+								<a class="btn shadow" href="{{path('platon_ticket_create', {'user': user.id})}}">Envoyer</a>
 							</div>
 						</div>
 					</div>
